--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ function MM_swapImage() { //v3.0
 </div>
 
 <div id="companyTitle2"></div>
-<div id="companyTitle2"><font color="#FF3300"><a href="compal2.html" target="_top">▋公司花絮test1</a></font>
+<div id="companyTitle2"><font color="#FF3300"><a href="compal2.html" target="_top">▋公司花絮</a></font>
 
 </div>
 
