--- a/index.html
+++ b/index.html
@@ -157,20 +157,20 @@ function MM_swapImage() { //v3.0
 </div>
 
 <div id="companyTitle2"></div>
-<div id="companyTitle2"><font color="#FF3300"><a href="compal2.html" target="_top">▋公司花絮-1</a></font>
+<div id="companyTitle2"><font color="#FF3300"><a href="compal2.html" target="_top">▋公司花絮</a></font>
 
 </div>
 
 <div id="company_ch">
   <div id="Informationleft01">    
     <div id="A1_450"><img src="images/index/a1/1.jpg" alt="" width="450" height="220" /></div>
-    <div class="A2_02_text" align="center"><a href="compal2.html" target="_top"><font class="A2text_03">【公司活動】-1</font></a>
+    <div class="A2_02_text" align="center"><a href="compal2.html" target="_top"><font class="A2text_03">【公司活動】</font></a>
     </div>
   </div>
   
   <div id="Informationleft">    
     <div id="A1"><img src="images/index/a2/1.jpg" alt="" width="220" height="220" /></div>
-    <div class="A2_02_text" align="center"><a href="compal2-2.html" target="_top"><font class="A2text_03">【新人介紹】-1</font></a>
+    <div class="A2_02_text" align="center"><a href="compal2-2.html" target="_top"><font class="A2text_03">【新人介紹】</font></a>
     </div>
   </div>
   
